# research_agent

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_IMPROVEMENTS_v8.5.2.md  CHANGELOG_v8.4.md  CHANGELOG_v8.5.0.md  CI_CD_FIXES.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY.txt  CODEBASE_REVIEW.md  CONSOLIDATION_GUIDE.md  Dockerfile  FINAL_VERIFICATION_v8.5.2.md  MANIFEST.in  MIGRATION_GUIDE.md  MIGRATION_NOTE_ORCHESTRATOR.md  Makefile  PRODUCTION_READY_BLUEPRINT.md  PYTHON_SETUP.md  README.md  SURGICAL_FIXES_SUMMARY.md  TEST_STATUS.md  WEB_SEARCH_INTEGRATION.md  docker-compose.yml  nohup.out  pyproject.toml  requirements.extra.txt  requirements.txt  run_full_features.py  run_full_features.sh  run_production.sh  run_research.sh  setup_environment.sh  smoke_test_travel_tourism.py  test_ci_locally.sh  test_ci_simulation.py  test_controversy.py  test_enhanced_features.py  test_fixes.py  (+11 more)
.github/workflows/: ci.yml
comprehensive_test/: GAPS_AND_RISKS.md  acceptance_guardrails.md  citation_checklist.md  evidence_cards.jsonl  final_report.md  plan.md  source_quality_table.md  source_strategy.md  triangulation_breakdown.md
config/: authorities.yml  fetch_policies.yml  guardrails.yml  quality.yml
controversy_test/: acceptance_guardrails.md  citation_checklist.md  plan.md  source_quality_table.md  source_strategy.md
debug_test/: acceptance_guardrails.md  citation_checklist.md  evidence_cards.jsonl  final_report.md  plan.md  source_quality_table.md  source_strategy.md  triangulation_breakdown.md
docs/: v8.4_fixes_summary.md
final_out/: acceptance_guardrails.md  final_report.md  plan.md  source_quality_table.md  source_strategy.md
final_success/: GAPS_AND_RISKS.md  acceptance_guardrails.md  citation_checklist.md  evidence_cards.jsonl  final_report.md  source_quality_table.md
full_debug_run/: acceptance_guardrails.md  plan.md  source_strategy.md
full_test_output/: acceptance_guardrails.md  evidence_cards.jsonl  plan.md  source_strategy.md
infrastructure/kubernetes/: configmap.yaml  (+2 more)
patches/: adaptive_integration.patch
production_final/: acceptance_guardrails.md  source_strategy.md
production_run/: acceptance_guardrails.md  evidence_cards.jsonl  plan.md  source_strategy.md
research_system/: __init__.py  __main__.py  agents.py  api_main.py  caches.py  collection.py  collection_enhanced.py  config.py  config_v2.py  context.py  controversy.py  exceptions.py  guardrails.py  main.py  metrics.py  models.py  orchestrator.py  orchestrator_adaptive.py  orchestrator_enhanced.py.deprecated  orchestrator_stats.py  orchestrator_v813_patch.py  policy.py  query_planner.py  research_engine.py  router.py  scoring.py  time_budget.py
scripts/: benchmark.py  fix_imports.py  quality_gate.py
test_fix/: acceptance_guardrails.md  source_strategy.md
test_fix2/: acceptance_guardrails.md  plan.md
test_integration/: acceptance_guardrails.md  plan.md  source_strategy.md
test_output/: acceptance_guardrails.md  citation_checklist.md  evidence_cards.jsonl  final_report.md  plan.md  source_quality_table.md  triangulation_breakdown.md
tests/: test_adaptive_quality.py  test_api_compliance.py  test_arex_rerank.py  test_circuit_breaker.py  test_claim_miner.py  test_claim_sentences.py  test_cluster_paraphrase.py  test_composer_bugfix.py  test_consolidation.py  test_datetime_timezone_fix.py  test_dedup.py  test_doi_fallback.py  test_enhancements.py  test_entity_norm.py  test_evidence_io.py  test_evidence_repair.py  test_evidence_validity.py  test_guardrails.py  test_integration.py  test_intent_classification.py  test_main_startup.py  test_metrics_consistency.py  test_no_duplication.py  test_normalizations.py  test_oecd_adapter.py  test_orchestrator_intents.py  test_output_directory.py  test_pdf_extraction.py  test_primary_share.py  test_production_fixes.py  test_provider_registry.py  test_registry.py  test_registry_unification.py  test_report_outputs.py  test_research_engine.py  test_semantic_classification.py  test_smoke_research.py  test_surgical_fixes.py  test_text_utilities.py  test_triangulation_flag.py  (+15 more)
(+253 files in other folders)
